--- a/Traveling_Salesman_Problem.ipynb
+++ b/Traveling_Salesman_Problem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPKMX/VSaLOT2wp9dvoAm6",
+      "authorship_tag": "ABX9TyO6vHlS8zbntafodxoppMxG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,9 +29,10 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
         "import math\n",
         "\n",
-        "# Haversine Formula untuk menghitung jarak antara dua titik berdasarkan koordinat lintang dan bujur\n",
+        "# Haversine Formula untuk menghitung jarak\n",
         "def haversine_distance(lat1, lon1, lat2, lon2):\n",
         "    R = 6371  # Radius bumi dalam km\n",
         "    lat1, lon1, lat2, lon2 = map(math.radians, [lat1, lon1, lat2, lon2])\n",
@@ -41,7 +42,7 @@
         "    c = 2 * math.atan2(math.sqrt(a), math.sqrt(1 - a))\n",
         "    return R * c\n",
         "\n",
-        "# Fungsi menghasilkan matriks jarak\n",
+        "# Fungsi untuk menghasilkan matriks jarak\n",
         "def calculate_distance_matrix(locations):\n",
         "    n = len(locations)\n",
         "    distance_matrix = [[0] * n for _ in range(n)]\n",
@@ -49,8 +50,8 @@
         "        for j in range(n):\n",
         "            if i != j:\n",
         "                distance_matrix[i][j] = haversine_distance(\n",
-        "                    locations[i][\"lat\"], locations[i][\"lon\"],\n",
-        "                    locations[j][\"lat\"], locations[j][\"lon\"]\n",
+        "                    locations[i][\"Latitude\"], locations[i][\"Longitude\"],\n",
+        "                    locations[j][\"Latitude\"], locations[j][\"Longitude\"]\n",
         "                )\n",
         "    return distance_matrix\n",
         "\n",
@@ -80,19 +81,12 @@
         "\n",
         "    return tour, total_distance\n",
         "\n",
-        "# Data lokasi\n",
-        "locations = [\n",
-        "    {\"name\": \"Pengelola\", \"lat\": -6.2088, \"lon\": 106.8456},\n",
-        "    {\"name\": \"Pemasok A\", \"lat\": -6.9175, \"lon\": 107.6191},\n",
-        "    {\"name\": \"Pemasok B\", \"lat\": -7.2504, \"lon\": 112.7688},\n",
-        "    {\"name\": \"Pemasok C\", \"lat\": -6.7149, \"lon\": 108.6098},\n",
-        "    {\"name\": \"Pemasok D\", \"lat\": -6.4089, \"lon\": 105.8480},\n",
-        "    {\"name\": \"Pemasok E\", \"lat\": -6.5000, \"lon\": 107.0000},\n",
-        "    {\"name\": \"Pemasok F\", \"lat\": -7.1000, \"lon\": 112.5000},\n",
-        "    {\"name\": \"Pemasok G\", \"lat\": -6.7000, \"lon\": 110.4000},\n",
-        "    {\"name\": \"Pemasok H\", \"lat\": -6.8000, \"lon\": 107.3000},\n",
-        "    {\"name\": \"Pemasok I\", \"lat\": -6.9000, \"lon\": 107.2000},\n",
-        "]\n",
+        "# Membaca data lokasi dari file Excel\n",
+        "file_path = \"data_lokasi.xlsx\"  # Ganti dengan path file Anda\n",
+        "df = pd.read_excel(file_path)\n",
+        "\n",
+        "# Mengonversi DataFrame ke format list of dictionaries\n",
+        "locations = df.to_dict(orient=\"records\")\n",
         "\n",
         "# Hitung matriks jarak\n",
         "distance_matrix = calculate_distance_matrix(locations)\n",
@@ -100,24 +94,24 @@
         "# Sebelum TSP\n",
         "print(\"Urutan Lokasi Sebelum TSP:\")\n",
         "for location in locations:\n",
-        "    print(location[\"name\"])\n",
+        "    print(location[\"Name\"])\n",
         "\n",
         "# Setelah TSP\n",
         "tour, total_distance = nearest_neighbor_tsp(distance_matrix)\n",
         "print(\"\\nUrutan Lokasi Setelah TSP:\")\n",
         "for index in tour:\n",
-        "    print(locations[index][\"name\"])\n",
+        "    print(locations[index][\"Name\"])\n",
         "\n",
-        "print(f\"\\nTotal Jarak Setelah TSP: {total_distance:.2f} km\")\n"
+        "print(f\"\\nTotal Jarak Setelah TSP: {total_distance:.2f} km\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hipPUGT-v_Ws",
-        "outputId": "6786a06a-3887-4e34-fc62-a77b2d29f5bf"
+        "outputId": "5ce3ea7b-4382-40c9-c11e-711c2a6a3acf"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,14 +158,14 @@
         "\n",
         "    # Plot lokasi\n",
         "    for i, loc in enumerate(locations):\n",
-        "        plt.plot(loc[\"lon\"], loc[\"lat\"], 'o', markersize=10, label=loc[\"name\"])\n",
-        "        plt.text(loc[\"lon\"], loc[\"lat\"], f\" {loc['name']}\", fontsize=9)\n",
+        "        plt.plot(loc[\"Longitude\"], loc[\"Latitude\"], 'o', markersize=10, label=loc[\"Name\"])\n",
+        "        plt.text(loc[\"Longitude\"], loc[\"Latitude\"], f\" {loc['Name']}\", fontsize=9)\n",
         "\n",
         "    # Plot garis rute\n",
         "    for i in range(len(tour) - 1):\n",
         "        start = locations[tour[i]]\n",
         "        end = locations[tour[i + 1]]\n",
-        "        plt.plot([start[\"lon\"], end[\"lon\"]], [start[\"lat\"], end[\"lat\"]], 'r--')\n",
+        "        plt.plot([start[\"Longitude\"], end[\"Longitude\"]], [start[\"Latitude\"], end[\"Latitude\"]], 'r--')\n",
         "\n",
         "    plt.title(title)\n",
         "    plt.xlabel(\"Longitude\")\n",
@@ -194,9 +188,9 @@
           "height": 1000
         },
         "id": "VN1ZMCYFwAbs",
-        "outputId": "cde564a4-f4ab-41fe-9705-67ee12967c58"
+        "outputId": "2950e29f-0808-496e-e8c0-313d10045008"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
