fix data lokasi excel

--- a/Traveling_Salesman_Problem.ipynb
+++ b/Traveling_Salesman_Problem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2c6IH84USuh/0EtGjKT9L",
+      "authorship_tag": "ABX9TyOeuUZD9c2hGvs64VxnEG60",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
         "# Membaca data lokasi dari file Excel\n",
         "file_path = \"data_lokasi.xlsx\"\n",
         "df = pd.read_excel(file_path)\n",
-        "df\n",
+        "print(df)\n",
         "\n",
         "# Mengonversi DataFrame ke format list of dictionaries\n",
         "locations = df.to_dict(orient=\"records\")\n",
@@ -110,14 +110,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hipPUGT-v_Ws",
-        "outputId": "4ff96352-0de5-4188-b25f-84c48b8fe725"
+        "outputId": "a05e80f6-3f41-49f4-de04-8d0af43a5d30"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "                      Name  Latitude   Longitude\n",
+            "0                Pengelola -7.047922  110.297677\n",
+            "1  Toko Ban Surabaya Putra -7.085865  110.309694\n",
+            "2              Davista Ban -7.079101  110.308762\n",
+            "3      Tambal Ban Mas Hadi -7.087787  110.362205\n",
+            "4     Tambal Ban Roda Jaya -7.018282  110.338316\n",
+            "5       All Star Ban Motor -7.034949  110.341499\n",
+            "6           Ada Ban Sadeng -7.035411  110.369627\n",
+            "7                 Dewa Ban -7.078412  110.378389\n",
+            "8        Hi-Bizz Ban & Oli -7.028121  110.335249\n",
+            "9              As Jaya Ban -7.047894  110.359797\n",
             "\n",
             "Urutan Lokasi Sebelum TSP:\n",
             "Pengelola\n",
