Traveling_Salesman_Problem.ipynb

--- a/Traveling_Salesman_Problem.ipynb
+++ b/Traveling_Salesman_Problem.ipynb
@@ -32,7 +32,7 @@
         "import pandas as pd\n",
         "import math\n",
         "\n",
-        "# Haversine Formula untuk menghitung jarak antara dua titik di permukaan bumi menggunakan koordinat lintang (latitude) dan bujur (longitude)\n",
+        "# Haversine Formula untuk menghitung jarak antara dua titik di permukaan bumi menggunakan koordinat\n",
         "def haversine_distance(lat1, lon1, lat2, lon2):\n",
         "    R = 6371  # Radius bumi dalam km\n",
         "    lat1, lon1, lat2, lon2 = map(math.radians, [lat1, lon1, lat2, lon2])\n",
