--- a/Traveling_Salesman_Problem.ipynb
+++ b/Traveling_Salesman_Problem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNkcayxsvJetMXYOtq1hcO",
+      "authorship_tag": "ABX9TyPNshYW3VsAPatN+RX8ogO2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Import Libary"
+        "# **Import Libary**"
       ],
       "metadata": {
         "id": "JlZ2RHXFzf3p"
@@ -51,7 +51,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Load Dataset"
+        "# **Load Dataset**"
       ],
       "metadata": {
         "id": "AAny4_Xdziik"
@@ -369,7 +369,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Traveling Salesman Problem (TSP)"
+        "# **Traveling Salesman Problem (TSP)**"
       ],
       "metadata": {
         "id": "Guky7TA30Dkh"
@@ -493,7 +493,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Hasil TSP"
+        "# **Hasil TSP**"
       ],
       "metadata": {
         "id": "I8Ll5vhM0Ya-"
