Dibuat menggunakan Colab

--- a/Traveling_Salesman_Problem.ipynb
+++ b/Traveling_Salesman_Problem.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYijBdp5NbihT0jIJN38Mn",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyN640G8sHVc7hAtNdK1rgCm"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,18 +17,8 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Alfaturachman/travelling-salesman-problem/blob/main/Traveling_Salesman_Problem.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Import Libary**"
+        "### **Import Libary**"
       ],
       "metadata": {
         "id": "JlZ2RHXFzf3p"
@@ -51,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Load Dataset**"
+        "### **Load Dataset**"
       ],
       "metadata": {
         "id": "AAny4_Xdziik"
@@ -369,7 +358,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Traveling Salesman Problem (TSP)**"
+        "### **Traveling Salesman Problem (TSP)**"
       ],
       "metadata": {
         "id": "Guky7TA30Dkh"
@@ -493,7 +482,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Hasil TSP**"
+        "### **Hasil TSP**"
       ],
       "metadata": {
         "id": "I8Ll5vhM0Ya-"
